@@ -268,22 +268,23 @@ section of rxvt(7).</p>
 <dt><strong><a name="item__2dfb_fontlist"><strong>-fb</strong> <em>fontlist</em></a></strong><br />
 </dt>
 <dd>
-Compile font-styles: The bold font list to use when bold characters are to
+Compile font-styles: The bold font list to use when <strong>bold</strong> characters are to
 be printed. See resource <strong>boldFont</strong> for details.
 </dd>
 <p></p>
 <dt><strong><a name="item__2dfi_fontlist"><strong>-fi</strong> <em>fontlist</em></a></strong><br />
 </dt>
 <dd>
-Compile font-styles: The italic font list to use when bold characters are to
+Compile font-styles: The italic font list to use when <em>italic</em> characters are to
 be printed. See resource <strong>italicFont</strong> for details.
 </dd>
 <p></p>
 <dt><strong><a name="item__2dfbi_fontlist"><strong>-fbi</strong> <em>fontlist</em></a></strong><br />
 </dt>
 <dd>
-Compile font-styles: The bold italic font list to use when bold characters are to
-be printed. See resource <strong>boldItalicFont</strong> for details.
+Compile font-styles: The bold italic font list to use when <strong><em>bold
+italic</em> </strong>&gt; characters are to be printed. See resource <strong>boldItalicFont</strong>
+for details.
 </dd>
 <p></p>
 <dt><strong><a name="item__2dis_7c_2bis"><strong>-is</strong>|<strong>+is</strong></a></strong><br />
