@@ -278,6 +278,7 @@ struct rxvt_font_default : rxvt_font {
     rxvt_fontprop p;
 
     p.width = p.height = 1;
+    p.ascent = rxvt_fontprop::unset;
     p.weight = rxvt_fontprop::medium;
     p.slant = rxvt_fontprop::roman;
 
@@ -525,6 +526,7 @@ rxvt_font_x11::set_properties (rxvt_fontprop &p, int height, const char *weight,
 {
   p.width  = avgwidth ? (avgwidth + 1) / 10 : (height + 1) / 2;
   p.height = height;
+  p.ascent = rxvt_fontprop::unset;
   p.weight = *weight == 'B' || *weight == 'b' ? rxvt_fontprop::bold : rxvt_fontprop::medium;
   p.slant  = *slant == 'r' || *slant == 'R' ? rxvt_fontprop::roman : rxvt_fontprop::italic;
 
@@ -554,6 +556,8 @@ rxvt_font_x11::set_properties (rxvt_fontprop &p, XFontStruct *f)
 
   free (weight);
   free (slant);
+
+  p.ascent = f->ascent;
 
   return true;
 }
@@ -1075,6 +1079,7 @@ rxvt_font_xft::properties ()
 
   p.width  = width;
   p.height = height;
+  p.ascent = ascent;
   p.weight = face->style_flags & FT_STYLE_FLAG_BOLD
                ? rxvt_fontprop::bold : rxvt_fontprop::medium;
   p.slant  = face->style_flags & FT_STYLE_FLAG_ITALIC
@@ -1338,7 +1343,7 @@ rxvt_fontset::~rxvt_fontset ()
 void
 rxvt_fontset::clear ()
 {
-  prop.width = prop.height = prop.weight = prop.slant
+  prop.width = prop.height = prop.ascent = prop.weight = prop.slant
     = rxvt_fontprop::unset;
 
   for (rxvt_font **i = fonts.begin (); i != fonts.end (); i++)
@@ -1521,6 +1526,9 @@ rxvt_fontset::find_font (unicode_t unicode)
 
           if (!realize_font (i))
             goto next_font;
+
+          if (prop.ascent != rxvt_fontprop::unset)
+            max_it (f->ascent, prop.ascent);
         }
 
       if (f->cs == CS_UNKNOWN)
