@@ -34,7 +34,7 @@ struct rxvt_fontprop {
     medium = 100, bold = 200,
     roman  = 0, italic = 100,
   };
-  int width, height;
+  int width, height, ascent;
   int weight, slant;
 };
 
